# agentic_ai_rag_financial_analysis_solution

./: .env.example  .gitignore  README.md  azure_services_validator.py  pyproject.toml  requirements.txt  script.py
.azure/: azureProfile.json  versionCheck.json
.github/workflows/: deploy_function.yml
azure_functions/: deploy.sh  requirements.txt
azure_functions/ingest_http/: __init__.py  function.json
data/: fortune_500.csv  fortune_500_resume.csv  manifest.json
src/financial_analysis_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/financial_copilot/: __init__.py  config.py  graph.py  main.py  state.py
src/financial_copilot/agents/: __init__.py  filings_rag.py  financial_data.py  metrics_analysis.py  reporting.py  risk_assessment.py  supervisor.py
src/financial_copilot/ingest/: chunk_filings.py  chunking.py  diagnose_ingestion.py  fortune_ingest.py  fortune_list.py  resume_ingest.py  test_chunking.py
src/financial_copilot/services/: __init__.py  azure_openai.py  blob_storage.py  search.py
src/financial_copilot/tools/: __init__.py  market_data.py
