[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-analysis-copilot"
version = "0.1.0"
description = "Azure-first LangGraph financial analysis copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "azure-identity>=1.17.0",
  "azure-keyvault-secrets>=4.9.0",
  "azure-search-documents>=11.6.0",
  "azure-storage-blob>=12.22.0",
  "langgraph>=0.2.34",
  "openai>=1.51.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "yfinance>=0.2.54",
]

[project.scripts]
financial-copilot = "financial_copilot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
